# sutoppu

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  sutoppu.py  tox.ini
.github/workflows/: ci.yml
src/: sutoppu.py
sutoppu/: __init__.py  sutoppu.py
tests/: __init__.py  conftest.py  test_error_report.py  test_sutoppu.py
